--- a/style.css
+++ b/style.css
@@ -1,10 +1,12 @@
 body{
     font-family: 'Poppins', sans-serif;
+    margin: 0%;
 }
 h1{
-    font-size: 50px;   
-}
-    .orange-color{
+    font-size: 60px;   
+
+}  
+.orange-color{
         color: rgb(28, 13, 160);
     }
 h3{
@@ -13,11 +15,36 @@ h3{
 }
 section{
     display: flex;
+    margin-bottom: 100px;
 }
 .half-width{
     width: 50%;
     padding: 2%;
+
 }
-.half-width img{
-width: 100%;
+.link-button{
+    text-decoration: none;
+    background-image: linear-gradient(orange,tomato);
+    padding: 10px 40px;
+    border-radius: 5px;
+
+}
+.top-banner{
+    background-image: url(images/top-banner.png);
+    background-repeat: no-repeat;
+}
+.dream-big{
+    display: flex;
+}
+.resume-button{
+    text-decoration: none;
+    background-image: linear-gradient(pink,purple);
+    padding: 10px 40px;
+    border-radius: 5px;
+    
+}
+.dream-big{
+    background-image: url(images/dream-bg.png);
+    background-repeat: no-repeat;
+    background-position-y: 0%;
 }
